<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single"
        android:id="@+id/groupItem"
        >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_alphabet"
            android:icon="@drawable/alphabet"
            android:title="@string/menu_alphabet" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/menu_search" />


        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/menu_about" />

        <item
             android:id="@+id/nav_exite"
             android:icon="@drawable/ic_baseline_exit_to_app_24"
             android:title="@string/menu_exit"

        />


    </group>
</menu>